--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8">
   <!-- Meta tags for social media banners, these should be filled in appropriatly as they are your "business card" -->
   <!-- Replace the content tag with appropriate information -->
-  <meta name="description" content="DESCRIPTION META TAG">
-  <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
+  <meta name="description" content="Acompanying website for 'Leveraging Electric Guitar Tones and Effects to Improve Robustness in Guitar Tablature Transcription Modeling' paper submitted to DAFx 2024 Late Breaking Results.">
+  <meta property="og:title" content="Leveraging Electric Guitar Tones and Effects to Improve Robustness in Guitar Tablature Transcription Modeling"/>
+  <meta property="og:description" content="Acompanying website for 'Leveraging Electric Guitar Tones and Effects to Improve Robustness in Guitar Tablature Transcription Modeling' paper submitted to DAFx 2024 Late Breaking Results."/>
+  <meta property="og:url" content="https://robust-guitar-tabs.github.io/"/>
   <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
+  <meta property="og:image" content="https://www.niu.edu/external-programs/_images/banners/intermediate-guitar-banner.jpg" />
   <meta property="og:image:width" content="1200"/>
   <meta property="og:image:height" content="630"/>
 
@@ -275,7 +275,7 @@ We evaluate our approach on a new evaluation dataset with professional solo guit
 </div>
 </section>
 
-<section class="section hero">
+<section class="section hero" >
   <div class="container my-4">
     <div class="columns is-centered has-text-centered">
       <h2 class="title is-3">Results</h2>
