--- a/index.html
+++ b/index.html
@@ -43,6 +43,23 @@
   <script src="static/js/bulma-carousel.min.js"></script>
   <script src="static/js/bulma-slider.min.js"></script>
   <script src="static/js/index.js"></script>
+  <style>
+    @media (max-width: 1230px) {
+      table {
+        font-size: 10px;
+      }
+    }
+    @media (max-width: 630px) {
+      table {
+        font-size: 8px;
+      }
+    }
+    @media (max-width: 509px) {
+      table {
+        font-size: 6px;
+      }
+    }
+  </style>
 </head>
 <body>
 
