--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
     @media (max-width: 509px) {
       table {
-        font-size: 6px;
+        font-size: 5px;
       }
     }
   </style>
@@ -147,7 +147,7 @@
 </section>
 
 
-<section class="section hero is-light">
+<!-- <section class="section hero is-light">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
@@ -160,7 +160,7 @@
       </div>
     </div>
   </div>
-</section> 
+</section>  -->
 <!-- End paper abstract
 
 <-- Paper abstract -->
